2007-01-15  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java: measure
	invocation time for method calls failing with exception too
	* projects/webservice/htdocs/data-pfxsoap.js: fix IE7 problem (wrong
	callback arguments)
	* projects/webservice/htdocs/calltest-pfxsoap.js: improved accuracy of
	invocation time measurement for asynchronous calls

2007-01-12  Martin Leidig  <mleidig@schlund.de>

	Refactored and added some new capabilities:
	- Added Perf-Events for service processing and service method invocation
	- Added logging of webservice "trails" (analogous to page request trails)
	- Simplified the configuration file format (many settings now have
	  reasonable default values and are optional)
	- WS monitoring application now shows additional data (like invocation
	  time and service method)
	- WS admin application now provides links to view the generated stubs for
	  the different protocol types
	_ Added support for different JSON-WS programming models (dynamic,
	  generated, low-level, etc.)
	- Added server-side runtime generation of JSON-WS stubs
	- Added JS namespace support to JSON and HTTP Javascript libraries

	Added:
	* src/de/schlund/pfixcore/webservice/ServiceStubGenerator.java
	* src/de/schlund/pfixcore/webservice/AdminWebapp.java
	* src/de/schlund/pfixcore/webservice/ProcessingInfo.java
	* src/de/schlund/pfixcore/webservice/ServiceDescriptorCache.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSStubGenerator.java
	* src/de/schlund/pfixcore/webservice/utils/FileCache.java
	* src/de/schlund/pfixcore/webservice/utils/FileCacheData.java

	Modified:
	* src/de/schlund/pfixcore/webservice/ServiceDescriptor.java
	* src/de/schlund/pfixcore/webservice/ServiceProcessor.java
	* src/de/schlund/pfixcore/webservice/ServiceCallContext.java
	* src/de/schlund/pfixcore/webservice/WebServiceServlet.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java